contract can be saved

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,6 @@ services:
     App\State\UserStateProcessor:
         bind:
             $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
+    App\State\ContractStateProcessor:
+        bind:
+            $persistProcessor: '@api_platform.doctrine.orm.state.persist_processor'
