--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,4 +32,4 @@ security:
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing API documentations and Swagger UI docs
         - { path: ^/auth, roles: PUBLIC_ACCESS }
         - { path: ^/api/users, roles: PUBLIC_ACCESS }
-        - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
